        - ClientResource was not checking the "followRedirects"
          property.
        - Fixed bug when sending entities with the GWT edition.
        - Fixed bug when normalizing References with the GWT edition.
          Reported by Guido Schmidt.
        - Fixed OSGi dependency issue with the JAX-RS extension.
          Reported by Stefan Maassen.
    - Enhancements
        - Improved JAXB converted. Contributed by Sanjay Acharya.
        - Upgraded Apache Commons Logging to version 1.1.1.
        - Added library jcip-annotations 1.0.
        - ServerSevlet now automatically supports the declaration of 
          several adapters in the same web.xml. Reworked the Javadocs
          to encourage usage of Servlet init parameters instead of
          context parameters.
        - Refactored connector extensions to move implementation 
          classes in "internal" packages hidden from the Javadocs.
        - Upgraded Jetty to version 7.0.0.
        - The default status page and directory listings are now using
          a sans-serif font.
        - Add support for annotations values separated by a ":" and "|"
          characters. Suggested by Bob Resendes.
        - Added Netty extension containing an HTTP server connector 
          based on this NIO client/server framework developed at JBoss.
          Contributed by Gabriel Ciuloaica.
        - Added support for result set paging in JDBC client connector.
          Contributed by Warren Janssens.
    - Misc
        - Added Velocity template in the org.restlet.example project.
          Reported by Ben Vesco.
- 2.0 Milestone 5 (2009-09-28)
    - API changes
        - Moved Message, Request and Response classes from the
          org.restlet.data to the org.restlet package as they are
          core artifacts of the API used in Uniform interface.
        - Deprecated Redirector.MODE_DISPATCHER to introduce support
          for MODE_CLIENT_DISPATCHER and MODE_SERVER_DISPATCHER.